# karpathy-knowledge-base

./: AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py
backend/app/routers/: notes.py  rag.py  search.py  vault.py
backend/app/services/: backlinks.py  embedding_service.py  file_watcher.py  indexer.py  rag_engine.py  vault_reader.py  vector_store.py
backend/tests/: conftest.py  test_backlinks.py  test_backlinks_integration.py  test_config.py  test_file_watcher.py  test_indexer.py  test_main.py  test_notes.py  test_notes_backlinks.py  test_rag.py  test_search.py  test_vault.py
docs/design/: architecture.md  requirements.md  tech-stack.md  user-flow.md
docs/review/: kkb-2-review.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: Chat.tsx  Daily.tsx  Home.tsx  NoteDetail.tsx  Search.tsx
frontend/src/services/: api.ts
vault/demo/: 2026-04-24.md  MOC-知识管理.md  概念-第二大脑.md  论文-Few-Shot Learners.md  项目-知识库搭建.md
